add_library(ArrayIO STATIC ArrayIO.cxx)
target_link_libraries(ArrayIO mpi)

target_include_directories(ArrayIO
  INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<INSTALL_INTERFACE:include/ArrayIO>)

install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/"
  DESTINATION include/ArrayIO FILES_MATCHING PATTERN "*.h")

install(TARGETS ArrayIO EXPORT ArrayIO INCLUDES DESTINATION
  include/ArrayIO ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)

install(EXPORT ArrayIO DESTINATION lib/cmake
  EXPORT_LINK_INTERFACE_LIBRARIES)
